# demarrer_c

./: README.md
c_project1/: CMakeLists.txt  age.c  main.c  readme.md
demo_cmake/: hello.c  readme.md
demo_pointeurs/: CMakeLists.txt  chaines.c  liste_chainee.c  liste_chainee.h  main.c  point1.c  point2.c  pointeurs.h  pointeurs1.c  pointeurs2.c  pointeurs3.c  pointeurs_struct.c  pointeurs_struct.h  readme.md
